# QLCxLaunchpad

./: Generall_workspace (remapped).qxw  Generall_workspace.qxw  MediaSys.autosave.qxw  MediaSys.qxw  README.md  Theather.qxw  U_Disko 2025.07final.autosave.qxw  U_Disko 2025.07final.qxw  U_Disko 2025.07finalbenutzt.autosave.autosave.autosave.qxw  U_Disko 2025.07finalbenutzt.autosave.autosave.qxw  U_Disko 2025.07finalbenutzt.autosave.qxw  U_Disko 2025.07finalbenutzt.qxw  Winterkonzert_2025.autosave.autosave (remapped).autosave.qxw  Winterkonzert_2025.autosave.autosave (remapped).qxw  Winterkonzert_2025.autosave.autosave.autosave.qxw  Winterkonzert_2025.autosave.autosave.qxw  Winterkonzert_2025.autosave.qxw  Winterkonzert_2025.qxw
Theatherverein/: Nebelmaschine.qxw  Testen01.qxw
fixtures/: Abstract-Twister_new.qxf  MediaSystem-Arry.qxf  MediaSystem-SmallEye_7.qxf  MediaSystem-Vader pro 750.qxf  MediaSystem-Vader pro.qxf  Mediasystem-Arry2.qxf  fixtures_Fun-Generation-SePar-Quad-LED-RGBW.qxf  fixtures_Stage-Right-Stage-Wash-7x10W-LED-Moving-Head.qxf
novation_windows/: Cargo.toml  config.toml  custom_colors.json  fader_colors.json  nudge_xy_state.json  rgbw_state.json
novation_windows/src/: main.rs
old/: Sommerkonzert 2025.01.qxw  Sommerkonzert 2025.01_Disko.qxw  Sommerkonzert 2025.01mitmatrix.qxw  Sommerkonzert 2025.01ohnematrix - Copy.qxw  Sommerkonzert 2025.01ohnematrix.qxw  U_Disko 2025.07.qxw
