[package]
name = "novation_windows"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "novation_windows"
path = "src/main.rs"

[dependencies]
midir = "0.11"
rosc = "0.11.4"
serde = { version = "1", features = ["derive"] }
toml = "1.1.2+spec-1.1.0"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
serde_json = "1.0.150"
